Implement de.tahifi.Appliance.Power interface.
Change-Id: I8d1e659c5107ab3f344ce36a831da177ebcb6011

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -85,6 +85,7 @@ noinst_LTLIBRARIES = \
     libcredentials_dbus.la \
     libconfigproxy.la \
     libconfiguration_dbus.la \
+    libappliance_dbus.la \
     libservicelist.la \
     libconnman_dbus.la \
     liblogind_dbus.la \
@@ -214,6 +215,9 @@ libcredentials_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 nodist_libconfiguration_dbus_la_SOURCES = configuration_dbus.c configuration_dbus.h
 libconfiguration_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
+nodist_libappliance_dbus_la_SOURCES = appliance_dbus.c appliance_dbus.h
+libappliance_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
+
 nodist_libdebug_dbus_la_SOURCES = debug_dbus.c debug_dbus.h
 libdebug_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
@@ -291,6 +295,10 @@ BUILT_SOURCES = \
     de_tahifi_configuration.h \
     de_tahifi_configuration.md \
     configuration_dbus.stamp \
+    $(nodist_libappliance_dbus_la_SOURCES) \
+    de_tahifi_appliance.h \
+    de_tahifi_appliance.md \
+    appliance_dbus.stamp \
     $(nodist_libconnman_dbus_la_SOURCES) \
     net_connman.h \
     net_connman.md \
@@ -392,6 +400,15 @@ configuration_dbus.h: configuration_dbus.stamp
 configuration_dbus.stamp: $(DBUS_IFACES)/de_tahifi_configuration.xml
 	$(GDBUS_CODEGEN) --generate-c-code=configuration_dbus --c-namespace tdbus --interface-prefix de.tahifi. $<
 	$(DBUS_IFACES)/extract_documentation.py -i $< -o de_tahifi_configuration.md -H de_tahifi_configuration.h -c tdbus -s de.tahifi. -n "$(PACKAGE_NAME) (configuration management)"
+	touch $@
+
+de_tahifi_appliance.h: appliance_dbus.stamp
+de_tahifi_appliance.md: appliance_dbus.stamp
+appliance_dbus.c: appliance_dbus.stamp
+appliance_dbus.h: appliance_dbus.stamp
+appliance_dbus.stamp: $(DBUS_IFACES)/de_tahifi_appliance.xml
+	$(GDBUS_CODEGEN) --generate-c-code=appliance_dbus --c-namespace tdbus_appliance --interface-prefix de.tahifi.Appliance. $<
+	$(DBUS_IFACES)/extract_documentation.py -i $< -o de_tahifi_appliance.md -H de_tahifi_appliance.h -c tdbus_appliance -s de.tahifi.Appliance. -n "Appliance state and control"
 	touch $@
 
 de_tahifi_debug.h: debug_dbus.stamp
