configure: Detect doctest header file (#966).
New policy: Unit tests shall be written using the doctest framework.
Cutter is a royal PITA in many aspects; doctest is much easier to use
and still much more powerful.

We *must* get rid of Cutter and its dreaded Glib dependency to enable
ourselves to make sane use of Valgrind. We are currently tied to the
specific Glib version on srv-dev. This means that updating that
machine will break all (!) unit tests in all projects because of
outdated and unmaintainable Valgrind exceptions. This also means that
we cannot move the acceptance builds that are run for each commit to
our much faster srv-bob.

So, here is the first fragment that enables us to move forward.

Change-Id: I37a4c40519902bb7be47df6c13c9b1e7af7f1a52

--- a/configure.ac
+++ b/configure.ac
@@ -88,6 +88,10 @@ CPPFLAGS="$save_CPPFLAGS"
 AC_LANG_POP([C++])
 ])
 
+AC_LANG_PUSH([C++])
+AC_CHECK_HEADER([doctest.h])
+AC_LANG_POP([C++])
+
 # Checks for typedefs, structures, and compiler characteristics.
 AX_CXX_COMPILE_STDCXX_11([noext])
 AC_CHECK_HEADER_STDBOOL
@@ -131,6 +135,7 @@ DH_SHLIBDEPS_ARGS="$DH_SHLIBDEPS_SYSROOT_ARGS $DH_SHLIBDEPS_LIBPATH_ARGS"
 AC_SUBST([DH_SHLIBDEPS_ARGS])
 
 AM_CONDITIONAL([WITH_CUTTER], [test "x$ac_cv_use_cutter" = "xyes"])
+AM_CONDITIONAL([WITH_DOCTEST], [test "x$ac_cv_header_doctest_h" = "xyes"])
 AM_CONDITIONAL([WITH_VALGRIND], [test "x$enable_valgrind" = "xyes"])
 AM_CONDITIONAL([WITH_MARKDOWN], [test "x$ac_cv_prog_MARKDOWN" != "x"])
 AM_CONDITIONAL([CAN_BUILD_DEBIAN_PACKAGE], [test "x$ac_cv_prog_DPKG_BUILDPACKAGE" != x && test "x$DEBIAN_ARCHITECTURE_NAME" != x])
