Unit tests: Improve doctest tests for use with TDD.
Two things:

1) speed of incremental compilation of tests has been improved by
  compiling the static doctest code into a separate convenience
  library, speeding up the red-green-refactor cycle; and
2) the new "doctest" Makefile target can be used to recompile and
  execute the tests directly without having to go through the "all"
  target and Autotest log files, also speeding up the TDD cycle.

Change-Id: I5c29d876488d05a9ca835c6968d47e0449ea0fb2

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,6 +59,11 @@ versioninfo.h: versioninfo.cache
 .md.html:
 	$(MARKDOWN) $< >$@
 
+if WITH_DOCTEST
+doctest:
+	$(MAKE) $(AM_MAKEFLAGS) -C tests_new $@
+endif
+
 if CAN_BUILD_DEBIAN_PACKAGE
 DEBIAN_PACKAGE_FILES = debian/changelog debian/compat debian/control debian/rules
 
