ConnMan: Addresses can be checked and patched when set.
The Connman::Address<Connman::AddressType::MAC> is the first type to
make use of this: the setter checks if there are colons in the right
places, inserts colons if they are missing, and converts the passed
address string to uppercase. In case of any problems, an exception is
thrown so that the ctor works better now as well.

As a result, the process_address() function in network_device_list.cc
got significantly shorter and more comprehensible.

The other address types (IPv4, IPv6) do not have this smartness built
in yet, they still accept whatever is passed to them.

Change-Id: Ib10548d7ead27c12d9bbc591c3c5183d187d403c

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -95,6 +95,7 @@ test_registers_la_LIBADD = \
     $(top_builddir)/src/libdynamic_buffer.la \
     $(top_builddir)/src/libnetworkprefs.la \
     $(top_builddir)/src/libservicelist.la \
+    $(top_builddir)/src/libconnman_service.la \
     $(top_builddir)/src/libinifile.la \
     $(top_builddir)/src/libxmodem.la
 test_registers_la_CFLAGS = $(AM_CFLAGS) $(DCPD_DEPENDENCIES_CFLAGS)
@@ -121,6 +122,7 @@ test_transactions_la_LIBADD = \
     $(top_builddir)/src/libconfigproxy.la \
     $(top_builddir)/src/libregisters.la \
     $(top_builddir)/src/libservicelist.la \
+    $(top_builddir)/src/libconnman_service.la \
     $(top_builddir)/src/libnetworkprefs.la \
     $(top_builddir)/src/libshutdown_guard.la \
     $(top_builddir)/src/libdynamic_buffer.la
@@ -144,6 +146,7 @@ test_networkprefs_la_SOURCES = \
 test_networkprefs_la_LIBADD = \
     $(top_builddir)/src/libnetworkprefs.la \
     $(top_builddir)/src/libservicelist.la \
+    $(top_builddir)/src/libconnman_service.la \
     $(top_builddir)/src/libinifile.la
 test_networkprefs_la_CFLAGS = $(AM_CFLAGS)
 test_networkprefs_la_CXXFLAGS = $(AM_CXXFLAGS)
