Build: Use od instead of xxd for generating do_update_sh.h.
There is no xxd in Yocto Project, and I am too lazy to add it. Falling
back to standard tools...

Change-Id: I125600a05652e4d0b3a176b889fd4ba3f19e79ae

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -457,5 +457,5 @@ systemd_dbus.stamp: $(DBUS_IFACES)/org_freedesktop_systemd1.xml
 do_update_sh.h: do_update.sh
 	echo 'static const uint8_t shell_script_content[] =' >$@
 	echo '{' >>$@
-	xxd -i <$^ >>$@
+	od -An -tx1 -v <$^ | sed 's/ / 0x/g;s/^ //;s/ /, /g;s/$$/,/' >>$@
 	echo '};' >>$@
