Unit tests: Support for JUnit reports and Valgrind in doctest.
Tests are executed by scripts taken from the StrBo-Common submodule.
These scripts emit JUnit and Valgrind report files for direct use by
Jenkins CI.

The doctest tests in test_connman_service.cc have been completed.

The new doctest-valgrind target is meant for running all tests in
Valgrind when needed. The target exists if Valgrind is not detected at
configuration time.

Change-Id: I59255a8b338cf04575ed93155a1181f75bf7992d

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,4 +62,7 @@ versioninfo.h: versioninfo.cache
 if WITH_DOCTEST
 doctest:
 	$(MAKE) $(AM_MAKEFLAGS) -C tests_new $@
+
+doctest-valgrind:
+	$(MAKE) $(AM_MAKEFLAGS) -C tests_new $@
 endif
