Unit tests: Configure doctest for simpler string checks.
Change-Id: If35156fe354f0dc87a3d5724dd2fb430a7db8ff7

--- a/tests_new/Makefile.am
+++ b/tests_new/Makefile.am
@@ -21,7 +21,8 @@ check_PROGRAMS = test_connman_service
 
 TESTS = $(check_PROGRAMS)
 
-AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_builddir)/src
+AM_CPPFLAGS = -DDOCTEST_CONFIG_TREAT_CHAR_STAR_AS_STRING
+AM_CPPFLAGS += -I$(top_srcdir)/src -I$(top_builddir)/src
 AM_CPPFLAGS += -I$(top_srcdir)/dbus_interfaces
 AM_CFLAGS = $(CWARNINGS)
 AM_CXXFLAGS = $(CXXWARNINGS)
