Access point: Add high level management.
Change-Id: I40a76d6c3f6399635558122110354b5e4c425ed0

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,8 @@ dcpd_SOURCES = \
     smartphone_app_send.cc smartphone_app_send.hh smartphone_app.hh \
     actor_id.h \
     applink.hh applink_variables.hh \
-    network.h network_status_bits.h accesspoint.hh \
+    network.h network_status_bits.h \
+    accesspoint_manager.hh accesspoint.hh \
     transactions.hh dcpdefs.h \
     messages.c messages.h messages_glib.c messages_glib.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
@@ -189,7 +190,9 @@ libdbus_handlers_la_SOURCES = \
 libdbus_handlers_la_CFLAGS = $(AM_CFLAGS)
 libdbus_handlers_la_CXXFLAGS = $(AM_CXXFLAGS)
 
-libaccesspoint_la_SOURCES = accesspoint.cc accesspoint.hh
+libaccesspoint_la_SOURCES = \
+    accesspoint.cc accesspoint.hh \
+    accesspoint_manager.cc accesspoint_manager.hh
 libaccesspoint_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 nodist_libdcpd_dbus_la_SOURCES = dcpd_dbus.c dcpd_dbus.h
