--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,7 +31,7 @@ dcpd_SOURCES = \
     accesspoint_manager.hh accesspoint.hh \
     transactions.hh dcpdefs.h \
     messages.c messages.h messages_glib.c messages_glib.h \
-    dynamic_buffer.h drcp.h drcp_command_codes.h \
+    dynamic_buffer.h drcp.hh drcp_command_codes.h \
     dcpregs_drcp.h dcpregs_networkconfig.hh dcpregs_wlansurvey.hh \
     dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.hh dcpregs_playstream.hh dcpregs_status.hh \
@@ -250,7 +250,7 @@ nodist_libdebug_dbus_la_SOURCES = debug_dbus.c debug_dbus.h
 libdebug_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
 libdrcpdcomm_la_SOURCES = \
-    drcp.c drcp.h \
+    drcp.cc drcp.hh \
     named_pipe.h \
     dynamic_buffer.h dynamic_buffer_util.h \
     messages.h
