--- a/Makefile.am
+++ b/Makefile.am
@@ -45,6 +45,7 @@ EXTRA_DIST += \
     dbus_interfaces/de_tahifi_mixer.xml \
     dbus_interfaces/de_tahifi_credentials.xml \
     dbus_interfaces/de_tahifi_appliance.xml \
+    dbus_interfaces/io_gerbera.xml \
     dbus_interfaces/net_connman.xml \
     dbus_interfaces/org_freedesktop_login1.xml \
     dbus_interfaces/org_freedesktop_systemd1.xml
